# etc

./: .buildinfo  CHANGELOG.rst  README.rst  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  logs.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.doctrees/: about.doctree  changelog.doctree  connect.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  logs.doctree  todos.doctree
.doctrees/centers/: index.doctree  x-00001.doctree  x-00002.doctree  x-00003.doctree  x-00004.doctree  x-00005.doctree  x-00006.doctree  x-00007.doctree  x-00008.doctree  x-00009.doctree  x-00010.doctree  x-00011.doctree  x-00012.doctree  x-00013.doctree  x-00014.doctree  x-00015.doctree  x-00016.doctree  x-00017.doctree  x-00018.doctree  x-00019.doctree  x-00020.doctree  x-00021.doctree  x-00022.doctree  x-00023.doctree  x-00024.doctree  x-00025.doctree  x-00026.doctree  x-00027.doctree  (+73 more)
_modules/: etc.html  index.html
_sources/: intro.rst.txt
centers/: index.html  x-00001.html  x-00002.html  x-00003.html  x-00004.html  x-00005.html  x-00006.html  x-00007.html  x-00008.html  x-00009.html  x-00010.html  x-00011.html  x-00012.html  x-00013.html  x-00014.html  x-00015.html  x-00016.html  x-00017.html  x-00018.html  x-00019.html  x-00020.html  x-00021.html  x-00022.html  x-00023.html  x-00024.html  x-00025.html  x-00026.html  x-00027.html  x-00028.html  x-00029.html  x-00030.html  x-00031.html  x-00032.html  x-00033.html  x-00034.html  x-00035.html  x-00036.html  x-00037.html  x-00038.html  x-00039.html  (+61 more)
demos/: demo.html  index.html
docs/: about.html
docsrc/: conf.py  glossary.rst  index.rst
etc/: chop.py  datafy.py  parse-2.py  parsed_data.json  split.py
genindex/: index.html
intro/: index.html
log/: atom.xml  index.html
mission/: index.html
modules/: index.html
refs/: index.html
search/: index.html
types/: center.html
usage/: index.html
(+34846 files in other folders)
