[project]
name = "geometor-etc"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "index for the encyclopedia of triangle centers"
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "rich",
]

[project.scripts]
etc = "geometor.etc.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.etc.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/etc"
"Repository" = "https://github.com/geometor/etc"
"Issues" = "https://github.com/geometor/etc/issues"
